--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+h1,h2,h3,h4,h5,h6{
+    color: #2f3e39;
+}
+p,span,a,small{
+    color: #8e9993;
+}
 .center-y{
     display: flex;
     justify-content: space-between;
@@ -35,9 +41,10 @@
     margin: 40px 0px;
 }
 .login-btns{
-    margin-top: 30px;
+    margin-top: 45px;
     display: flex;
     justify-content: space-between;
+    padding: 0px 15px;
 }
 .login-btns a{
     width: 48%;
@@ -50,7 +57,7 @@
     font-weight: 500;
 }
 .login-btns a:nth-child(2){
-    width: 48%;
+    width: 45%;
     background-color: #374a44;
     color: #fff;
     border-radius: 5px;
@@ -59,9 +66,118 @@
 .check-rate-btn{
     display: block;
     text-align: center;
-    padding: 30px;
+    padding: 45px 0px;
     text-decoration: none;
     color: #374a44;
     text-decoration: none;
     font-weight: 500;
+    padding-bottom: 55px;
+
+}
+.header{
+    background-color: #00a859;
+    color: white;
+    text-align: center;
+    padding: 10px 0px;
+}
+.back-btn{
+    position: absolute;
+    left: 10px;
+    color: white;
+    text-decoration: none;
+}
+.page-name{
+    font-size: 18px;
+    font-weight: 600;
+}
+.logo{
+    width: 50%;
+    margin: auto;
+    display: block;
+    padding-top: 15px;
+}
+.step-counters{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.step-counter{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    /* margin:0 auto; */
+    margin-top: 30px;
+    font-size: 1.5rem;
+    color: #8e9993;
+}
+.step-counters .step-counter:nth-child(odd){
+    /* transform: scale(.5); */
+    width: 50px;
+    height: 50px;
+}
+.counter-right-arrow{
+    position: absolute;
+    top: 38%;
+    right: 28%;
+}
+.current-step{
+    font-size: 2rem;
+    color: #00a859;
+    font-weight: 600;
+}
+.dd-select{
+    background-color: white !important;
+    border: 1px solid #00a859 !important;
+    border-radius: 10px !important;
+}
+.dd-image-right{
+    width: 20px;
+}
+.dd-option-text{
+    line-height: 16px !important;
+    color: #8e9993 !important;
+}
+.dd-selected-text{
+    line-height: 16px !important;
+}
+.dd-select a{
+    color: #8e9993;
+}
+.custom-shape-divider-bottom-1650966956 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1650966956 svg {
+    position: relative;
+    display: block;
+    width: calc(150% + 1.3px);
+    height: 50px;
+}
+
+.custom-shape-divider-bottom-1650966956 .shape-fill {
+    fill: #FFFFFF;
+}
+.wave-bg{
+    position: relative;
+    background-color: #eeeeee;
+    padding-bottom: 60px;
+}
+.cont-btn{
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: #00a859;
+    color: white;
+    border: none;
 }
