added atep 2 of signup page

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,24 @@
-h1,h2,h3,h4,h5,h6{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     color: #2f3e39;
 }
-p,span,a,small{
+
+p,
+span,
+small {
     color: #8e9993;
 }
-.center-y{
+
+a {
+    color: #00a859;
+    text-decoration: none;
+}
+
+.center-y {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -12,41 +26,50 @@ p,span,a,small{
     min-height: 100vh;
 }
 
-#welecome-slider{
+#welecome-slider {
     padding: 0px 35px;
 }
-#welecome-slider .carousel-indicators [data-bs-target]{
+
+#welecome-slider .carousel-indicators [data-bs-target] {
     height: 10px;
     width: 10px;
     border-radius: 50%;
     background-color: #cccccc;
 }
-#welecome-slider .carousel-indicators{
+
+#welecome-slider .carousel-indicators {
     position: static;
 }
-#welecome-slider .carousel-indicators .active{
+
+#welecome-slider .carousel-indicators .active {
     background-color: #00a859;
 }
-#welecome-slider .carousel-inner{
+
+#welecome-slider .carousel-inner {
     text-align: center;
 }
-#welecome-slider .carousel-inner h4{
+
+#welecome-slider .carousel-inner h4 {
     color: #2f3e39;
 }
-#welecome-slider .carousel-inner p{
+
+#welecome-slider .carousel-inner p {
     color: #8e9993;
 }
-.welcome-logo{
+
+.welcome-logo {
     width: 100%;
     margin: 40px 0px;
 }
-.login-btns{
+
+.login-btns {
     margin-top: 45px;
     display: flex;
     justify-content: space-between;
     padding: 0px 15px;
 }
-.login-btns a{
+
+.login-btns a {
     width: 48%;
     color: #374a44;
     border-radius: 5px;
@@ -56,14 +79,16 @@ p,span,a,small{
     padding: 8px;
     font-weight: 500;
 }
-.login-btns a:nth-child(2){
+
+.login-btns a:nth-child(2) {
     width: 45%;
     background-color: #374a44;
     color: #fff;
     border-radius: 5px;
     border: 1px solid #374a44;
 }
-.check-rate-btn{
+
+.check-rate-btn {
     display: block;
     text-align: center;
     padding: 45px 0px;
@@ -74,35 +99,40 @@ p,span,a,small{
     padding-bottom: 55px;
 
 }
-.header{
+
+.header {
     background-color: #00a859;
     color: white;
     text-align: center;
     padding: 10px 0px;
 }
-.back-btn{
+
+.back-btn {
     position: absolute;
     left: 10px;
     color: white;
     text-decoration: none;
 }
-.page-name{
+
+.page-name {
     font-size: 18px;
     font-weight: 600;
 }
-.logo{
+
+.logo {
     width: 50%;
     margin: auto;
     display: block;
     padding-top: 15px;
 }
-.step-counters{
+
+.step-counters {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
 
-.step-counter{
+.step-counter {
     width: 100px;
     height: 100px;
     border-radius: 50%;
@@ -115,39 +145,50 @@ p,span,a,small{
     font-size: 1.5rem;
     color: #8e9993;
 }
-.step-counters .step-counter:nth-child(odd){
+
+.step-counters .step-counter:nth-child(odd) {
     /* transform: scale(.5); */
     width: 50px;
     height: 50px;
 }
-.counter-right-arrow{
+
+.counter-right-arrow {
     position: absolute;
     top: 38%;
     right: 28%;
 }
-.current-step{
+
+.current-step {
     font-size: 2rem;
     color: #00a859;
     font-weight: 600;
 }
-.dd-select{
+
+.dd-select {
     background-color: white !important;
     border: 1px solid #00a859 !important;
     border-radius: 10px !important;
 }
-.dd-image-right{
+
+.dd-image-right {
     width: 20px;
 }
-.dd-option-text{
+
+.dd-option-text {
     line-height: 16px !important;
     color: #8e9993 !important;
 }
-.dd-selected-text{
+
+.dd-selected-text {
     line-height: 16px !important;
+    font-weight: 400;
+    color: #00a859;
 }
-.dd-select a{
+
+.dd-select a {
     color: #8e9993;
 }
+
 .custom-shape-divider-bottom-1650966956 {
     position: absolute;
     bottom: 0;
@@ -168,16 +209,192 @@ p,span,a,small{
 .custom-shape-divider-bottom-1650966956 .shape-fill {
     fill: #FFFFFF;
 }
-.wave-bg{
+
+.wave-bg {
     position: relative;
     background-color: #eeeeee;
     padding-bottom: 60px;
 }
-.cont-btn{
+
+.cont-btn {
+    display: block;
+    text-decoration: none;
+    text-align: center;
+    font-weight: 500;
     width: 100%;
     padding: 10px;
     border-radius: 5px;
     background-color: #00a859;
     color: white;
     border: none;
+}
+
+@keyframes growProgressBar {
+
+    0%,
+    33% {
+        --pgPercentage: 0;
+    }
+
+    100% {
+        --pgPercentage: var(--value);
+    }
+}
+
+@property --pgPercentage {
+    syntax: '<number>';
+    inherits: false;
+    initial-value: 0;
+}
+
+div[role="progressbar"] {
+    /* --size: 7rem; */
+    --fg: #00a859;
+    --bg: rgb(255, 255, 255);
+    --pgPercentage: var(--value);
+    animation: growProgressBar 2s 1 forwards;
+    /* width: var(--size); */
+    /* height: var(--size); */
+    border-radius: 50%;
+    /* display: grid; */
+    place-items: center;
+    background:
+        radial-gradient(closest-side, white 80%, transparent 0 99.9%, white 0),
+        conic-gradient(var(--fg) calc(var(--pgPercentage) * 1%), var(--bg) 0);
+    /* font-size: calc(var(--size) / 5); */
+    /* color: var(--fg); */
+}
+
+.custom-input {
+    width: 100%;
+    border: 1px solid #00a859;
+    color: #00a859;
+    padding: 10px;
+    border-radius: 10px;
+    outline: none;
+}
+
+.custom-input::placeholder {
+    color: #00a85a86;
+}
+
+.custom-input:-moz-placeholder {
+    color: #00a85a86;
+}
+
+.custom-input::-moz-placeholder {
+    color: #00a85a86;
+}
+
+.custom-input:-ms-input-placeholder {
+    color: #00a85a86;
+}
+
+.eye-btn {
+    border: none;
+    background: transparent;
+    padding: 0px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 15px;
+    color: #00a859;
+}
+
+#review-accordion .accordion-button {
+    font-size: 14px;
+    color: #00a859;
+    background: transparent;
+    padding-left: 5px;
+}
+
+#review-accordion .accordion-body {
+    padding-top: 5px;
+}
+
+#review-accordion .accordion-button::after {
+    margin-left: 15px;
+    width: 1rem;
+    height: 1rem;
+    background-size: 1rem;
+}
+
+#review-accordion .accordion-item {
+    border: none;
+    background: transparent;
+}
+
+#review-accordion .accordion-button:focus {
+    box-shadow: none;
+}
+
+#review-accordion .accordion-button:not(.collapsed) {
+    box-shadow: none;
+}
+
+/* The container */
+.check_container {
+    display: block;
+    position: relative;
+    padding-left: 20px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 14px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.check_container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+    position: absolute;
+    top: 5px;
+    left: 0;
+    height: 15px;
+    width: 15px;
+    border: 1px solid #8e9993;
+    border-radius: 2px;
+}
+
+
+
+/* When the checkbox is checked, add a blue background */
+.check_container input:checked~.checkmark {
+    background-color: #00a859;
+    border-color: #00a859;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+/* Show the checkmark when checked */
+.check_container input:checked~.checkmark:after {
+    display: block;
+}
+
+/* Style the checkmark/indicator */
+.check_container .checkmark:after {
+    left: 5px;
+    top: 2px;
+    width: 4px;
+    height: 8px;
+    border: solid white;
+    border-width: 0 2px 2px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
 }
