--- a/css/style.css
+++ b/css/style.css
@@ -462,3 +462,6 @@ div[role="progressbar"] {
     box-shadow: 1px 1px 4px rgb(0, 0, 0,  0.4);
     font-weight: 500;
 }
+/* .skip-btn{
+    background-color: ;
+} */
