--- a/css/style.css
+++ b/css/style.css
@@ -438,7 +438,7 @@ div[role="progressbar"] {
     display: block;
     font-weight: 500;
 }
-.account-number{
+.user-name{
     font-weight: 500;
     display: block;
 }
@@ -462,6 +462,65 @@ div[role="progressbar"] {
     box-shadow: 1px 1px 4px rgb(0, 0, 0,  0.4);
     font-weight: 500;
 }
-/* .skip-btn{
-    background-color: ;
-} */
+.boxes{
+    width: 100%;
+    display: flex;
+    background: #eeeeee;
+    border-radius: 15px;
+    justify-content: center;
+    align-items: center;
+    font-size: 32px;
+    height: 80px;
+}
+.boxes~span{
+    text-align: center;
+    display: block;
+}
+.circles{
+    width: 100%;
+    border-radius: 50%;
+    padding: 5px;
+    background-color: #eeeeee;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.circles::before{
+    content: "";
+    float: left;
+    padding-top: 100%;
+}
+.circles img{
+    width: 60%;
+}
+.circles~small{
+    font-size: 12px;
+    display: block;
+    text-align: center;
+    text-transform: capitalize;
+    line-height: 14px;
+}
+.circles_parent{
+    width: 20%;
+    margin-top: 10px;
+}
+.circles i{
+    font-size: 30px;
+    color: #00a859 !important;
+}
+.banner-area .carousel-indicators{
+    position: static;
+}
+.banner-area .carousel-indicators [data-bs-target] {
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    background-color: #cccccc;
+}
+
+.banner-area .carousel-indicators .active {
+    background-color: #00a859;
+}
+.banner-area img{
+    border-radius: 15px;
+}
