--- a/css/style.css
+++ b/css/style.css
@@ -528,10 +528,11 @@ div[role="progressbar"] {
     color: #00a859;
 }
 .send-boxes{
-    border-radius: 15px;
+    border-radius: 5px;
     box-shadow: 1px 1px 10px #eeeeee;
     padding: 15px;
     margin-bottom: 20px;
+    width: 48%;
 }
 .bg-theme{
     background-color: #00a859;
@@ -540,8 +541,60 @@ div[role="progressbar"] {
     font-size: 12px;
 }
 .send-boxes h5{
-    font-size: 16px;
+    font-size: 14px;
 }
 .send-boxes .badge{
     font-size: 10px;
+}
+.white-box{
+    background-color: white;
+    border-radius: 15px;
+    padding: 15px;
+    margin: auto;
+    width: 40%;
+}
+.user-div{
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 25px;
+    box-shadow: 0px 5px 1.5rem rgb(0 0 0 / 20%);
+    padding: 15px 20px;
+    font-size: 14px;
+}
+.user-img {
+    margin-right: 15px;
+}
+.user-img img {
+    border-radius: 50%;
+    height: 40px;
+    width: 40px;
+    object-fit: cover;
+    object-position: center;
+}
+.bell-icon-2{
+    color: #00a859;
+    background: transparent;
+    border: none;
+    font-size: 24px;
+    position: relative;
+}
+.logo-2{
+    height: 30px;
+}
+
+.notification {
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(235, 36, 36);
+    color: white;
+    font-size: 10px;
+    border-radius: 50%;
+    top: 0px;
+    right: 2px;
 }
