--- a/css/style.css
+++ b/css/style.css
@@ -598,3 +598,26 @@ div[role="progressbar"] {
     top: 0px;
     right: 2px;
 }
+.footer-menu {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    position: fixed;
+    width: 100%;
+    bottom: 0px;
+    padding: 10px 0px;
+    background: white;
+    box-shadow: 0px 0px 1.5rem rgb(0 0 0 / 20%);
+    background: #0da859;
+}
+
+.footer-menu a {
+    text-align: center;
+    font-size: 14px;
+    color: white;
+    text-decoration: none;
+}
+
+.footer-menu i {
+    font-size: 24px;
+}
