--- a/css/style.css
+++ b/css/style.css
@@ -613,11 +613,23 @@ div[role="progressbar"] {
 
 .footer-menu a {
     text-align: center;
-    font-size: 14px;
+    font-size: 12px;
     color: white;
     text-decoration: none;
 }
 
 .footer-menu i {
-    font-size: 24px;
+    font-size: 20px;
+}
+
+.close-btn {
+    background-color: transparent;
+    border: 1px solid #0da859;
+    border-radius: 5px;
+    font-weight: 500;
+    text-decoration: none;
+    padding: 0px;
+    width: 100%;
+    color: #00a859;
+    padding: 9px;
 }
