--- a/css/style.css
+++ b/css/style.css
@@ -583,6 +583,17 @@ div[role="progressbar"] {
     font-size: 24px;
     position: relative;
 }
+.money {
+    background-color: #0da859;
+    padding: 5px 15px;
+    border-radius: 25rem;
+    color: white !important;
+    width: max-content;
+    margin-left: auto;
+}
+.money span{
+    color: white;
+}
 .logo-2{
     height: 30px;
 }
