--- a/css/style.css
+++ b/css/style.css
@@ -668,10 +668,14 @@ div[role="progressbar"] {
     padding: 10px;
     transition: all .3s;
     border: 1px solid #eeeeee;
+    display: block;
 }
 .widthraw-box h6{
     margin-top: 10px;
 }
 .widthraw-box img{
     width: 50%;
+}
+.theme_bg {
+    background: #0da859;
 }
