--- a/css/style.css
+++ b/css/style.css
@@ -683,3 +683,35 @@ div[role="progressbar"] {
     letter-spacing: 5px;
     font-size: 1.8rem;
 }
+.point-sale-box {
+    background-color: white;
+    box-shadow: 1px 1px 2px rgb(0 0 0 / 20%);
+    transition: all .3s;
+    border-radius: 10px;
+    position: relative;
+}
+.rate-popup {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    /* height: 100%; */
+    background-color: white;
+    box-shadow: 1px 1px 2px rgb(0 0 0 / 20%);
+    transition: all .3s;
+    border-radius: 10px;
+    /* visibility: hidden; */
+    display: none;
+    transition: all .3s;
+}
+.stars i {
+    color: #0da859;
+}
+.state-img img {
+    height: 40px;
+    width: 40px;
+    object-fit: cover;
+}
+.rate {
+    cursor: pointer;
+}
